external-crates/move/crates/move-compiler/tests/move_2024/parser/friend_decl_qualified_struct.move
module 0x42::A {
    struct A {}
}

module 0x42::M {
    friend 0x42::A::A;
}
